chore[1194]: added Test